@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.6" provider-name="Twilight0">
+<addon id="service.subtitles.subtitles.gr" name="Subtitles.gr" version="1.5.7~beta1" provider-name="Twilight0">
 	<requires>
 		<import addon="xbmc.python" version="2.24.0"/>
 		<import addon="script.module.tulip" version="2.2.4" />
@@ -19,6 +19,12 @@
 		<platform>all</platform>
 		<language>el</language>
 		<news>
+[B]1.5.7[/B]
+- Instantiate query variable in run function
+- Search tv shows/series subtitles with dual queries to maximize subtitles match
+- Add clear cache function
+- Notify user when search term is too broad
+
 [B]1.5.5 - 1.5.6[/B]
 - Log exceptions and queries for debugging purposes
 - Rename subtitle in order to mitigate illegal chars for filesystems that struggle with them
